--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
           name: Back-end build
           command: |
             # Your code here
-            cd Backend
+            cd backend
             npm install
             npm run build
       - save_cache:
