--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,7 +119,7 @@ jobs:
             cd frontend
             npm install
             # npm install oauth-sign@^0.9.0
-            npm audit --audit-level=critical    
+            npm audit fix --audit-level=critical    
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-scan
@@ -138,7 +138,7 @@ jobs:
             cd backend
             npm install
             # npm install oauth-sign@^0.9.0
-            npm audit --audit-level=critical    
+            npm audit fix --audit-level=critical    
       - save_cache:
           paths: [backend/node_modules]
           key: backend-scan
