--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -341,7 +341,8 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [test-feature-branch]
+              # only: [test-feature-branch]
+              only: [master]
       # - configure-infrastructure:
       #     requires: [deploy-infrastructure]
       # - run-migrations:
