--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,13 +253,13 @@ jobs:
             npm install
             npm run migrations > migrations_dump.txt
       - run:
-          name: Send migration status to kvdb.io 
+          name: Send migration status to kvdb 
           command: |
             # Your code here
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
               curl https://kvdb.io/9GE4jRtKznmVKRfvdBABBe/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-       fi
+            fi
       - destroy-environment
       - revert-migrations       
 
