--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ commands:
           name: Install Ansible
           command:
             sudo apt update
-            sudo apt install software-properties-common -y
+            sudo apt install software-properties-common 
             sudo add-apt-repository --yes --update ppa:ansible/ansible
-            sudo apt install ansible -y
+            sudo apt install ansible 
 
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
