--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -331,25 +331,62 @@ jobs:
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
 
       - destroy-environment
-      - revert-migrations
-      # Here's where you will add some code to rollback on failure      
+      - revert-migrations      
                     
-#   deploy-backend:
-#     docker:
-#       # Docker image here that supports Ansible
-#     steps:
-#       # Checkout code from git
-#       # Add ssh keys with fingerprint
-#       # attach workspace
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Deploy backend
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure  
+  deploy-backend:
+    docker:
+      # Docker image here that supports Ansible
+      - image: python:3.7-alpine3.11
+    steps:
+      # Checkout code from git
+      - checkout
+      # Add ssh keys with fingerprint
+      - add_ssh_keys:
+          fingerprints:
+            - "d9:ab:86:35:55:c6:3c:ae:9d:2f:da:33:95:13:5b:57"
+      # attach workspace
+      - attach_workspace:
+          at: ~/
+
+      - restore_cache:
+          keys: [backend-build]
+
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+            cd backend
+            npm install
+            npm run build
+            cd ..
+
+      - run:
+          name: Backend files
+          command: |
+            # Zip the directory
+            tar -C backend -czvf artifact.tar.gz .
+            cp artifact.tar.gz  ~/
+
+      - run:
+          name: Check if content file exists inventory.txt && artifact.tar.gz file
+          command:
+            # your code here
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+
+      - run:
+          name: Deploy backend
+          command: |
+            # your code here
+            cd .circleci/ansible
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
+
+        - destroy-environment
+        - revert-migrations   
+
+      
+      # Here's where you will add some code to rollback on failure  
 
 #   smoke-test:
 #     docker:
