--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -382,8 +382,8 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
 
-        - destroy-environment
-        - revert-migrations   
+      - destroy-environment
+      - revert-migrations   
 
       
       # Here's where you will add some code to rollback on failure  
@@ -470,8 +470,8 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [run-migrations]
-      # - deploy-backend:
-      #     requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
       # - smoke-test:
       #     requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
