--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -336,7 +336,7 @@ jobs:
   deploy-backend:
     docker:
       # Docker image here that supports Ansible
-      - image: python:3.7-alpine3.11
+      - image: cimg/base:stable
     steps:
       # Checkout code from git
       - checkout
@@ -384,8 +384,6 @@ jobs:
 
       - destroy-environment
       - revert-migrations   
-
-      
       # Here's where you will add some code to rollback on failure  
 
 #   smoke-test:
