--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ commands:
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             sudo ./aws/install
-            
+
   install_nodejs:
     description: Install Node.js 13
     steps:
@@ -363,6 +363,10 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
+      - install_ansible
+      - install_nodejs
+      - install_awscli
+      
       # Add ssh keys with fingerprint
       - add_ssh_keys:
           fingerprints:
