--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -359,14 +359,13 @@ jobs:
   deploy-backend:
     docker:
       # Docker image here that supports Ansible
-      - image: python:3.7-alpine3.11
+      - image: cimg/base:stable
     steps:
       # Checkout code from git
       - checkout
       - install_ansible
       - install_nodejs
       - install_awscli
-
       # Add ssh keys with fingerprint
       - add_ssh_keys:
           fingerprints:
@@ -375,15 +374,10 @@ jobs:
       - attach_workspace:
           at: ~/
 
+  restore-backend-cache:
+    steps:
       - restore_cache:
           keys: [backend-build]
-
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update ansible
-            apk add --update tar
-            apk add --update gzip
 
       - run:
           name: Install dependencies
