--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,11 @@ commands:
             sudo add-apt-repository --yes --update ppa:ansible/ansible
             sudo apt install ansible -y
 
+  restore-backend-cache:
+    steps:
+      - restore_cache:
+          keys: [backend-build]
+
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
@@ -374,8 +379,6 @@ jobs:
       - attach_workspace:
           at: ~/
 
-  restore-backend-cache:
-    steps:
       - restore_cache:
           keys: [backend-build]
 
