Deploy Backend fixed bug

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -15,13 +15,18 @@
 - name: "Installing Node Dependencies"
   shell: |
     cd ~/backend
-    tar -xvzf artifact.tar.gz
-    npm install -f
+    npm i
+    # tar -xvzf artifact.tar.gz
+    # npm install -f
+
 - name: "Executing Node app with PM2"
   shell: |
     cd ~/backend
-    pm2 start npm -- start -f
-    pm2 list
+    pm2 stop default
+    pm2 start main.js
+    # pm2 start npm -- start -f
+    # pm2 list
+
   register: execute_node
 
 - name: print message
@@ -29,6 +34,8 @@
     msg: "{{ execute_node.stdout_lines }}"
 
 - name: "Configure pm2 to start as service"
+  become: true
   shell: |
-    sudo su -c "env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu"
-    pm2 save
+    # sudo su -c "env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu"
+    # pm2 save
+    env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
