--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -389,7 +389,7 @@ jobs:
             # npm run build
             # cd ..
       - run:
-          name: Backend Package files
+          name: Backend Package 
           command: |
             # Zip the directory
             cd backend
