--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -386,37 +386,27 @@ jobs:
             # your code here
             cd backend
             npm install
-            # npm run build
-            # cd ..
+            npm run build
+            cd ..
       - run:
           name: Backend Package 
           command: |
             # Zip the directory
-            cd backend
-            npm run build
-            tar -czf artifact.tar.gz dist/* package*
-
-            cd ..
-            cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
-            # tar -C backend -czvf artifact.tar.gz .
-            # cp artifact.tar.gz  ~/
-      # - run:
-      #     name: Check if content file exists inventory.txt && artifact.tar.gz file
-      #     command:
-      #       # your code here
-      #       cd .circleci/ansible
-      #       echo "Contents  of the inventory.txt file is -------"
-      #       cat inventory.txt
-      #       echo "Contents of files folder is -------"
-      #       ls ~/
+            tar -C backend -czvf artifact.tar.gz .
+            cp artifact.tar.gz  ~/
+      - run:
+          name: Check if content file exists inventory.txt && artifact.tar.gz file
+          command:
+            # your code here
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
+            echo "Contents of files folder is -------"
+            ls ~/
       - run:
           name: Deploy backend
           command: |
             # your code here
-            export TYPEORM_MIGRATIONS_DIR=./migrations
-            export TYPEORM_ENTITIES=./modules/domain/**/*.entity{.ts,.ts}
-            export TYPEORM_MIGRATIONS_DIR=./migrations/*.ts
-
             cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
