--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -362,17 +362,26 @@ jobs:
   deploy-backend:
     docker:
       # Docker image here that supports Ansible
-      - image: cimg/base:stable
+      # - image: cimg/base:stable
+      - image: python:3.7-alpine3.11
     steps:
       # Checkout code from git
       - checkout
-      - install_ansible
-      - install_nodejs
       - install_awscli
+      - install_nodejs
+      - install_ansible
       # Add ssh keys with fingerprint
       - add_ssh_keys:
           fingerprints:
             - "d9:ab:86:35:55:c6:3c:ae:9d:2f:da:33:95:13:5b:57"
+
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update ansible
+            apk add --update tar
+            apk add --update gzip
+
       # attach workspace
       - attach_workspace:
           at: ~/
