--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -362,8 +362,7 @@ jobs:
   deploy-backend:
     docker:
       # Docker image here that supports Ansible
-      # - image: cimg/base:stable
-      - image: python:3.7-alpine3.11
+      - image: cimg/base:stable
     steps:
       # Checkout code from git
       - checkout
