--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -305,7 +305,7 @@ jobs:
             # Your code here
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-                curl https://kvdb.io/DGbJw4xWn9b8b8vNiN4gx/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+                curl https://kvdb.io/DGbJw4xWn9b8b8vNiN4gx/migration_$\{CIRCLE_WORKFLOW_ID:0:7\}  -d '1'
             fi      
 
   deploy-frontend:
