--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,9 +247,6 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "d9:ab:86:35:55:c6:3c:ae:9d:2f:da:33:95:13:5b:57"
-
-      - attach_workspace:
-          at: ~/
       
       - run:
           name: Install dependencies
@@ -339,7 +336,7 @@ jobs:
             # your code here
             export BACKEND_IP=$(aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filter Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
@@ -373,13 +370,6 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "d9:ab:86:35:55:c6:3c:ae:9d:2f:da:33:95:13:5b:57"
-
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update ansible
-            apk add --update tar
-            apk add --update gzip
 
       # attach workspace
       - attach_workspace:
