--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -427,9 +427,9 @@ jobs:
             echo "${API_URL}"
             if curl "${API_URL}/api/status" | grep "ok"
             then
-              return 0
+              exit 0
             else
-              return 1
+              exit 1
             fi
       - run:
           name: Frontend smoke test.
@@ -440,10 +440,13 @@ jobs:
             if curl -s ${URL} | grep "Welcome"
             then
               # Change this to 0 after the job fails
-              return 1
+              exit 1
             else
-              return 1
+              exit 1
             fi
+
+      - destroy-environment
+      - revert-migrations      
        # Here's where you will add some code to rollback on failure  
 
 #   cloudfront-update:
