Promotion Phase Updating Cloudfront fixed 01

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -475,9 +475,9 @@ jobs:
             # your code here
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
-              --stack-name InitialStack \
               --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
-              
+              --stack-name InitialStack
+            
       - destroy-environment
       - revert-migrations        
   
