--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -283,6 +283,10 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
+      - awscli
+      - restore_cache:
+          keys: [scan-backend]
+          
       - run:
           name: Run migrations
           command: |
@@ -290,6 +294,9 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
+            echo "has been executed successfully." >> migrations_dump.txt
+            cat migrations_dump.txt
+
       - run:
           name: Send migration status to kvdb 
           command: |
