--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -285,7 +285,7 @@ jobs:
       - checkout
       - install_awscli
       - restore_cache:
-          keys: [scan-backend]
+          keys: [backend-scan]
 
       - run:
           name: Run migrations
