--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -278,7 +278,7 @@ jobs:
 
   run-migrations:
     docker:
-      # Docker image here that will support NodeJS
+      # Use Docker image here that will support NodeJS
       - image: cimg/node:13.8.0
     steps:
       - checkout
