--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,7 +279,7 @@ jobs:
   run-migrations:
     docker:
       # Use Docker image here that will support NodeJS
-      - image: cimg/node:13.8.0
+      - image: circleci/node:15.0.1
     steps:
       - checkout
       - install_awscli
