run-migrations edited code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -356,7 +356,7 @@ jobs:
     docker:
       - image: cimg/base:stable
     steps:
-      # Add ssh keys with fingerprint
+      # Add ssh keys with fingerprint here
       # attach workspace
       - checkout
       - add_ssh_keys:
