Revert "Deploy Infrastructure & Fixed run-migrations & cleanup"
This reverts commit 21ec406983b67a074b93d2f39fddea9f6e62861e.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,7 +157,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [frontend-scan]
+          keys: [scan-frontend]
       - run:
           name: Run frontend scan
           command: |
@@ -176,7 +176,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [backend-scan]
+          keys: [scan-backend]
       - run:
           name: Run backend scan
           command: |
